tests/compile_fail/invalid_filter_field.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/invalid_filter_field.rs:5:14
  |
5 |     #[filter(bad_filter)]
  |              ^^^^^^^^^^
  |              |
  |              incorrect number of function parameters
  |              arguments to this function are incorrect
  |
  = note: expected fn pointer `for<'r> fn(&'r u32) -> bool`
                found fn item `fn() {bad_filter}`
note: function defined here
 --> tests/compile_fail/invalid_filter_field.rs:2:10
  |
2 | #[derive(Arbitrary, Debug, PartialEq)]
  |          -^^^^^^^^
  = note: this error originates in the derive macro `Arbitrary` (in Nightly builds, run with -Z macro-backtrace for more info)
